# xTetris-Game

./: .gitignore  CMakeLists.txt  CODING TASK.md  Coding instructions.md  Doxyfile  Makefile  README.md  build.sh  buildAndRun.sh  run.sh
.github/workflows/: codeql-analysis.yml
assets/: example
docs/: annotated.html  annotated_dup.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js
docs/html/: annotated.html  classes.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_5ccf6f5f6f8f5a0c68d52188c0c1e2bd.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_9114377542324ea4d72df78db2e516a9.html  dir_ce49f72e66729804d189bb6654649e9d.html  dir_e1a715d407a4074a9fa63b2e02ec2b8f.html  dir_ee532ceb613f48f23d20ef02624c3a91.html  doxygen-awesome.css  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  index.html  menudata.js
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  (+64 more)
src/: bot.h  common.c  common.h  common.h~  definitions.h  gameCtrl.c  gameCtrl.h  gameMenu.c  gameMenu.h  initBoard.c  initBoard.h  manageStruct.c  manageStruct.h  printGame.c  printGame.h  struct.h  tetrominoes.c  tetrominoes.h  x-tetris.c  xTetris.c
(+171 files in other folders)
